fix: change width of scrollBar

--- a/src/components/sideBar/style.css
+++ b/src/components/sideBar/style.css
@@ -69,7 +69,7 @@ footer {
   .sidebar{
     left: 0;
     top: 0;
-    width: 40vw;
+    width: 60vw;
     height: 100vh;
     transform:translate(-40vw) ;
     background-color: rgb(28,36,48);
